--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -148,7 +148,7 @@
                <div class="modal-header">
                     <div class="pl-5 d-flex justify-content-start align-items-center">
                          <i class="fas fa-exclamation-triangle"></i>
-                         <h5 class="modal-title">Confirmation</h5>
+                         <h4>Confirmation</h4>
                      </div>
                </div>
 
