--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -74,7 +74,7 @@
                          <div class="input-group-prepend">
                               <div class="input-group-text">🔎</div>
                          </div>
-                         <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" placeholder="Search by category, model, inventory number, status or Service Now ticket">
+                         <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" tabindex="-1" disabled placeholder="Search by category, model, inventory number, status or Service Now ticket">
                     </div>
                </div>
           </form>
@@ -87,8 +87,10 @@
      </section>
 
 
+     <p id='pNothingFound' class='text-center'>Nothing found 👎</p>
 
-     <div class="my-table-spinner spinner-border" role="status">
+
+     <div class="table-spinner spinner-border" role="status">
           <span class="sr-only">Loading...</span>
      </div>
 
