New filters working. The user can filter by category, inventory number, location, user, requisition number and model.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -74,7 +74,7 @@
                          <div class="input-group-prepend">
                               <div class="input-group-text">🔎</div>
                          </div>
-                         <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" tabindex="-1" disabled placeholder="Search by category, model, inventory number, status or Service Now ticket">
+                         <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" tabindex="-1" disabled placeholder="Search by category, model, inventory number, user or Service Now ticket">
                     </div>
                </div>
           </form>
