Few adjustments: Login page title. Prevent default when clicking in modal tab links. Added another URI for connecting with local database.

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -11,7 +11,7 @@
      <meta name="keywords" content="Inventory, Stock, Control, Web Application, HTML, CSS, JavaScript, Node.js, MongoDB">
      <meta name="description" content="Web Application for controlling the inventory of the Help Desk Department at the Conselho da Justiça Federal in Brasília, Brazil.">
      
-     <title>ICOS - Inventory Control System</title>
+     <title>ICOS | Inventory Control System</title>
      
      <script src="../js/jquery-3.5.1.min.js"></script>
      <script src="../js/bootstrap.min.js"></script>
