--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -79,11 +79,36 @@
                </div>
           </form>
 
-          <table class="table-inventory table table-hover table-responsive-sm">
+          <table class="table table-hover table-responsive-sm" id="inventoryTable">
                <thead></thead>
                <tbody></tbody>
                <tfoot></tfoot>
           </table>
+
+          <div class="container">
+               <div class="row">
+
+                    <div class="col-md-8 d-flex justify-content-center justify-content-lg-start pt-3" id="tablePagination">
+
+                    </div>
+                    
+                    <div class="col-md-4 d-flex justify-content-center justify-content-lg-end">
+                         <form class="form-inline">
+                              <div class="form-group">
+                                   <label for="itemsPerPage">Items per page: </label>
+                                   <select class="form-control ml-3" name="numItems" id="itemsPerPage">
+                                        <option value="10">10</option>
+                                        <option value="20" selected>20</option>
+                                        <option value="30">30</option>
+                                        <option value="40">40</option>
+                                   </select>
+                              </div>
+                         </form>
+                    </div>
+
+               </div>
+          </div>
+
      </section>
 
 
