Improving table pagination. Still developing and testing.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -96,8 +96,8 @@
                          <form class="form-inline">
                               <div class="form-group">
                                    <label for="itemsPerPage">Items per page: </label>
-                                   <select class="form-control ml-3" name="numItems" id="itemsPerPage">
-                                        <option value="10">10</option>
+                                   <select class="form-control ml-3" name="numItems" id="itemsPerPage" disabled>
+                                        <option value="7">7</option>
                                         <option value="20" selected>20</option>
                                         <option value="30">30</option>
                                         <option value="40">40</option>
