--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -85,19 +85,17 @@
                <tfoot></tfoot>
           </table>
 
-          <div class="container">
+          <div class="container" id="paginationContainer" hidden>
                <div class="row">
-
                     <div class="col-md-8 d-flex justify-content-center justify-content-lg-start pt-3" id="tablePagination">
-
                     </div>
-                    
+
                     <div class="col-md-4 d-flex justify-content-center justify-content-lg-end">
                          <form class="form-inline">
                               <div class="form-group">
                                    <label for="itemsPerPage">Items per page: </label>
-                                   <select class="form-control ml-3" name="numItems" id="itemsPerPage" disabled>
-                                        <option value="7">7</option>
+                                   <select class="form-control ml-3" id="itemsPerPage">
+                                        <option value="4">4</option>
                                         <option value="20" selected>20</option>
                                         <option value="30">30</option>
                                         <option value="40">40</option>
@@ -105,7 +103,6 @@
                               </div>
                          </form>
                     </div>
-
                </div>
           </div>
 
