--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -90,6 +90,21 @@
           <div class="container" id="paginationContainer" hidden>
                <div class="row">
                     <div class="col-md-8 d-flex justify-content-center justify-content-lg-start pt-3" id="tablePagination">
+                         <nav aria-label="Inventory Table - Pagination">
+                              <ul class="pagination">
+                                   <li class="page-item" id="tablePaginationPrevious">
+                                        <a class="page-link" href="#">Previous</a>
+                                   </li>
+                                   
+                                   <li class="page-item page-number" id="pageNumberOne">
+                                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+                                   </li>
+                                   
+                                   <li class="page-item" id="tablePaginationNext">
+                                        <a class="page-link" href="#">Next</a>
+                                   </li>
+                              </ul>
+                         </nav>
                     </div>
 
                     <div class="col-md-4 d-flex justify-content-center justify-content-lg-end">
