JS functions related to the table pagination were moved to a dedicated file called table-pagination.js

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -216,6 +216,7 @@
 
 
 <script src="../js/inventory.js"></script>
+<script src="../js/table-pagination.js"></script>
 <script src="../js/inventory-modal-info.js"></script>
 <script src="../js/inventory-modal-transfer.js"></script>
 <script src="../js/inventory-modal-update.js"></script>
