More improvement in the table pagination. Need to set the event handler for the Next and Previous buttons.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -97,7 +97,7 @@
                                    </li>
                                    
                                    <li class="page-item page-number" id="pageNumberOne">
-                                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+                                        <a class="page-link" href="#">1</a>
                                    </li>
                                    
                                    <li class="page-item" id="tablePaginationNext">
@@ -113,6 +113,9 @@
                                    <label for="itemsPerPage">Items per page: </label>
                                    <select class="form-control ml-3" id="itemsPerPage">
                                         <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="7">7</option>
+                                        <option value="10">10</option>
                                         <option value="20" selected>20</option>
                                         <option value="30">30</option>
                                         <option value="40">40</option>
