--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -93,7 +93,10 @@
                          <nav aria-label="Inventory Table - Pagination">
                               <ul class="pagination">
                                    <li class="page-item" id="tablePaginationPrevious">
-                                        <a class="page-link" href="#">Previous</a>
+                                        <a class="page-link" href="#">
+                                             <span>Previous</span>
+                                             <i class="fas fa-backward"></i>
+                                        </a>
                                    </li>
                                    
                                    <li class="page-item page-number" id="pageNumberOne">
@@ -101,7 +104,10 @@
                                    </li>
                                    
                                    <li class="page-item" id="tablePaginationNext">
-                                        <a class="page-link" href="#">Next</a>
+                                        <a class="page-link" href="#">
+                                             <span>Next</span>
+                                             <i class="fas fa-forward"></i>
+                                        </a>
                                    </li>
                               </ul>
                          </nav>
