--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -221,7 +221,7 @@ fieldset.form-group {
 
 .opacity-layer {
      background-color: rgba(0,0,0,0.8);
-     position: absolute;
+     position: fixed;
      top: 0;
      left: 0;
      width: 100vw;
