--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -191,7 +191,7 @@
 <div id="opacityLayer"></div>
 
 
-<aside class="modal fade" id="confirmationModal" tabindex="-1">
+<aside class="modal fade" data-backdrop="static" id="confirmationModal" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
 
