Adjustment in the routes. Created Register Page. Link working.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -227,6 +227,7 @@
 </footer>
 
 
+<script src="../js/app.js"></script>
 <script src="../js/inventory.js"></script>
 <script src="../js/table-pagination.js"></script>
 <script src="../js/inventory-modal-info.js"></script>
