Starting to create the Register Page with a form.

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -19,6 +19,19 @@
 
 <section>
      
-     <p>Formulário para cadastro!</p>
+     <form class='mt-5' id='formRegisterStockItem'>
+          <div class="form-group">
+               <label for="registerItemCategory">Category</label>
+               <select class="form-control" id="registerItemCategory">
+                    <option selected disabled value=''>---</option>
+               </select>
+          </div>
+          <div class="form-group">
+               <label for="registerItemModel">Model</label>
+               <select class="form-control" id="registerItemModel">
+                    <option selected disabled value=''>---</option>
+               </select>
+          </div>
+     </form>
 
 </section>
