--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -65,7 +65,7 @@
 
      <section>
           
-          <form class="form-inline d-flex justify-content-between align-items-center mb-3" id="inventoryTableTopForm">
+          <form class="form-inline d-flex justify-content-between align-items-center mt-5 mb-3" id="inventoryTableTopForm">
                
                <div class="form-group col-12 col-md-7 mb-3 mb-md-0" id="tableFilterGroup">
                     <label class="sr-only" for="tableFilterInputField">
@@ -191,8 +191,6 @@
 </aside>
 
 
-<div id="opacityLayer"></div>
-
 
 <aside class="modal fade" data-backdrop="static" id="confirmationModal" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
@@ -219,12 +217,14 @@
 </aside>
 
 
+
 <footer class="page-footer d-flex align-items-center">
      <div class="container">
           <p class="m-0">Created by Jair Junior</p>
           <p class="m-0">© Copyright 2021</p>
      </div>
 </footer>
+
 
 
 <script src="../js/app.js"></script>
