--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,37 +1,37 @@
+<main class="container">
 
-<header class="container p-0">
-     <h1 class="main-title text-center">Register</h1>
+     <header class="container p-0">
+          <h1 class="main-title text-center">Register</h1>
 
-     <ul class="nav nav-tabs">
-          <li class="nav-item">
-               <a class="nav-link active" href="#">Stock Items</a>
-          </li>
-          <li class="nav-item">
-               <a class="nav-link" href="#">Models</a>
-          </li>
-          <li class="nav-item">
-               <a class="nav-link" href="#">Categories</a>
-          </li>
-     </ul>
-</header>
+          <ul class="nav nav-tabs">
+               <li class="nav-item">
+                    <a class="nav-link active" href="#">Stock Items</a>
+               </li>
+               <li class="nav-item">
+                    <a class="nav-link" href="#">Models</a>
+               </li>
+               <li class="nav-item">
+                    <a class="nav-link" href="#">Categories</a>
+               </li>
+          </ul>
+     </header>
 
 
-
-<section>
+     <section>
+          <form class='mt-5' id='formRegisterStockItem'>
+               <div class="form-group">
+                    <label for="registerItemCategory">Category</label>
+                    <select class="form-control" id="registerItemCategory">
+                         <option selected disabled value=''>---</option>
+                    </select>
+               </div>
+               <div class="form-group">
+                    <label for="registerItemModel">Model</label>
+                    <select class="form-control" id="registerItemModel">
+                         <option selected disabled value=''>---</option>
+                    </select>
+               </div>
+          </form>
+     </section>
      
-     <form class='mt-5' id='formRegisterStockItem'>
-          <div class="form-group">
-               <label for="registerItemCategory">Category</label>
-               <select class="form-control" id="registerItemCategory">
-                    <option selected disabled value=''>---</option>
-               </select>
-          </div>
-          <div class="form-group">
-               <label for="registerItemModel">Model</label>
-               <select class="form-control" id="registerItemModel">
-                    <option selected disabled value=''>---</option>
-               </select>
-          </div>
-     </form>
-
-</section>
+</main>
