A lot of changes in order to make the register page work properly. Still needs to finish the form and the send of the data to the DB.

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -5,13 +5,13 @@
 
           <ul class="nav nav-tabs">
                <li class="nav-item">
-                    <a class="nav-link active" href="#">Stock Items</a>
+                    <a class="nav-link active" href="#">New Item</a>
                </li>
                <li class="nav-item">
-                    <a class="nav-link" href="#">Models</a>
+                    <a class="nav-link" href="#">New Model</a>
                </li>
                <li class="nav-item">
-                    <a class="nav-link" href="#">Categories</a>
+                    <a class="nav-link" href="#">New Category</a>
                </li>
           </ul>
      </header>
@@ -20,14 +20,14 @@
      <section>
           <form class='mt-5' id='formRegisterStockItem'>
                <div class="form-group">
-                    <label for="registerItemCategory">Category</label>
-                    <select class="form-control" id="registerItemCategory">
+                    <label for="selectItemCategory">Category</label>
+                    <select class="form-control" id="selectItemCategory">
                          <option selected disabled value=''>---</option>
                     </select>
                </div>
                <div class="form-group">
-                    <label for="registerItemModel">Model</label>
-                    <select class="form-control" id="registerItemModel">
+                    <label for="selectItemModel">Model</label>
+                    <select class="form-control" id="selectItemModel" disabled>
                          <option selected disabled value=''>---</option>
                     </select>
                </div>
