Register Form layout modifield. Addded fieldsets to organize content. In JS file there's a function to show each fieldset. By default, the form shows only the first fieldset with the Item Specs to choose. After choose category and model, the other fieldsets will show up beneath.

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,10 +1,22 @@
+fieldset.form-group {
+    border: 1px solid rgba(0, 0, 0, 0.226);
+    padding: 0.5rem 1.5rem 1.5rem;
+    border-radius: 10px;
+    margin-bottom: 2rem;
+}
+
+fieldset.form-group legend {
+    width: auto;
+    padding: 0 10px;
+}
+
 .model-spec {
     font-weight: bold;
     text-align: center; 
 }
 
 #modelSpecs {
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 #btnRegisterNewItem {
