--- a/public/views/register.html
+++ b/public/views/register.html
@@ -19,18 +19,27 @@
 
      <section>
           <form class='mt-5' id='formRegisterStockItem'>
-               <div class="form-group">
-                    <label for="selectItemCategory">Category</label>
-                    <select class="form-control" id="selectItemCategory">
-                         <option selected disabled value=''>---</option>
-                    </select>
-               </div>
-               <div class="form-group">
-                    <label for="selectItemModel">Model</label>
-                    <select class="form-control" id="selectItemModel" disabled>
-                         <option selected disabled value=''>---</option>
-                    </select>
-               </div>
+               
+               <fieldset class="form-group" id="fieldsetItemSpecs">
+                    <legend>Item Specs</legend>
+                    <div class="form-row">
+                         <div class="form-group col-md-12">
+                              <label for="selectItemCategory">Category</label>
+                              <select class="form-control" id="selectItemCategory">
+                                   <option selected disabled value=''>---</option>
+                              </select>
+                         </div>
+                    </div>
+                    <div class="form-row">
+                         <div class="form-group col-md-12">
+                              <label for="selectItemModel">Model</label>
+                              <select class="form-control" id="selectItemModel" disabled>
+                                   <option selected disabled value=''>---</option>
+                              </select>
+                         </div>
+                    </div>
+               </fieldset>
+
           </form>
      </section>
      
