--- a/public/css/register.css
+++ b/public/css/register.css
@@ -19,8 +19,24 @@ fieldset.form-group legend {
     margin-top: 2em;
 }
 
-#btnRegisterNewItem {
+#btnRegisterNewStockItem {
     display: block;
     margin: 2em auto 0;
+
+}
+
+#formRegisterStockItem {
+    padding: 30px 40px;
+    border-radius: 10px;
+    /*box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.267);*/
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+
+@media screen and (max-width: 991px){
+
+    #formRegisterStockItem {
+        padding: 20px 10px;
+    }
 
 }
