Pequenos ajustes no HTML e JS.

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -19,13 +19,13 @@
          <div class="my-div-collapse collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                    <li class="my-nav-item nav-item active">
-                        <a class="my-nav-link nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
+                        <a class="my-nav-link nav-link" href="/app/inventory">Inventory <span class="sr-only">(current)</span></a>
                    </li>
                    <li class="my-nav-item nav-item">
-                        <a class="my-nav-link nav-link" href="#">Register</a>
+                        <a class="my-nav-link nav-link" href="/app/register">Register </a>
                    </li>
                    <li class="my-nav-item nav-item">
-                        <a class="my-nav-link nav-link" href="#">Documentation</a>
+                        <a class="my-nav-link nav-link" href="#">Documentation </a>
                    </li>
                    <li class="my-nav-item nav-item dropdown">
                         <a class="my-nav-link nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
