--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -29,7 +29,7 @@
                          <div class="input-group-prepend">
                               <div class="input-group-text">🔎</div>
                          </div>
-                         <input type="text" class="form-control" id="tableFilterInputField" placeholder="Search by category, model, inventory number, user or Service Now ticket" disabled>
+                         <input type="text" class="form-control" id="tableFilterInputField" placeholder="Search by category, model, inventory number, user or OTRS ticket number" disabled>
                     </div>
                </div>
 
