O arquivo register.html foi modificado para ter os containers nos quais os componentes que constroem o formulário de registro serão inseridos. O arquivo register.js ficou com algumas funções a serem executadas quando a página Register é carregada.

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -17,30 +17,22 @@
      </header>
 
 
-     <section>
-          <form class='mt-5' id='formRegisterStockItem'>
-               
-               <fieldset class="form-group" id="fieldsetItemSpecs">
-                    <legend>Item Specs</legend>
-                    <div class="form-row">
-                         <div class="form-group col-md-12">
-                              <label for="selectItemCategory">Category</label>
-                              <select class="form-control" id="selectItemCategory">
-                                   <option selected disabled value=''>---</option>
-                              </select>
-                         </div>
-                    </div>
-                    <div class="form-row">
-                         <div class="form-group col-md-12">
-                              <label for="selectItemModel">Model</label>
-                              <select class="form-control" id="selectItemModel" disabled>
-                                   <option selected disabled value=''>---</option>
-                              </select>
-                         </div>
-                    </div>
-               </fieldset>
+     <div id="alert-Info" class="mt-5">
+     </div>
 
+
+     <section id="section-RegisterNewItem">
+          <form class='mt-5' id='form-RegisterNewItem'>
+               <div id="ItemSpecs"></div>
+               <div id="InventoryNumber"></div>
+               <div id="Provider"></div>
+               <div id="Recipient"></div>
+               <div id="TicketNumber"></div>
+               <div id="Reason"></div>
+               <div id="Remarks"></div>
+               <div id="BtnRegister"></div>
           </form>
      </section>
      
+
 </main>
